<resources>
    <string name="app_name">ejercicio10</string>
    <string name="cocacola">Cocacola(0,54€)</string>
    <string name="kaslimon">Kas Limon(0,57€)</string>
    <string name="kasnaranja">Kas Naranja(0,57€)</string>
    <string name="redbull">Red Bull(1,25€)</string>
    <string name="cerveza">Cerveza(0,62€)</string>
    <string name="vino">Botella de Vino(3,18€)</string>
    <string name="nombreapellidos">nombre y apellidos</string>
    <string name="edad">Soy mayor de edad</string>
    <string name="cero">0</string>
    <string name="comprar">Comprar</string>
    <string name="pagar">Pagar</string>
    <string name="num_tarjeta">número de la tarjeta</string>
    <string name="mes">mes</string>
    <string name="anio">año</string>
    <string name="cvv">cvv</string>
</resources>